# luanti-earth

./: .gitignore  README.md  check_colors.cjs  check_colors.js  colors.lua  init.lua  mod.conf  package-lock.json  package.json  reproduce_crash.lua  test_color_matching.lua  test_native.lua  tile_downloader.js  visualizer.html  voxel_importer.lua  voxelize-model.js  voxelize_tiles.js  voxelizer.worker.js  voxelizer_export.js
native/: CMakeLists.txt  build.bat
native/src/: debug_log.h  downloader.cpp  downloader.h  main.cpp  voxelizer.cpp  voxelizer.h
